fix focus ring for dark mode

--- a/packages/styles/tailwind-directives.scss
+++ b/packages/styles/tailwind-directives.scss
@@ -4,27 +4,29 @@
 @tailwind components;
 @tailwind utilities;
 
+// for some reason the light mixin is needed otherwise the dark mixin styles won't be applied
+
 @layer utilities {
   .ring-active {
-    @apply outline-none ring-4;
+    @apply outline-none ring-4 border;
 
     @include mixins.light {
-      @apply border-primary-600 ring-primary-400;
+      @apply border-primary-700 ring-primary-400;
     }
 
     @include mixins.dark {
-      @apply border-primary-700 ring-primary-1000;
+      @apply border-primary-500 ring-primary-1000;
     }
   }
   .ring-danger {
     @apply outline-none ring-4;
 
     @include mixins.light {
-      @apply border-danger-600 ring-danger-400;
+      @apply border-danger-700 ring-danger-400;
     }
 
     @include mixins.dark {
-      @apply border-danger-700 ring-danger-1000;
+      @apply border-danger-500 ring-danger-1000;
     }
   }
 }
